<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">易盘</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">列表</string>
    <string name="title_task">任务</string>
    <string name="title_counter">计数器</string>
    <string name="title_settings">设置</string>
    
    <!-- 导出功能相关 -->
    <string name="export_button_description">导出数据</string>
    <string name="export_permission_title">存储权限</string>
    <string name="export_permission_message">我们需要存储权限来导出数据到外部存储。</string>
    <string name="export_success">数据文件已保存到下载目录: %1$s</string>
    <string name="export_failure">导出失败: %1$s</string>
    <string name="export_permission_denied">无法导出数据，需要存储权限</string>
    <string name="export_permission_manual">您需要在设置中手动授予应用存储权限才能导出数据</string>
    <string name="permission_granted">权限已授予</string>
    <string name="permission_denied">权限被拒绝</string>
    
    <!-- 设置页面 -->
    <string name="settings_default_task">默认任务设置</string>
    <string name="settings_default_unit">默认单位</string>
    <string name="settings_default_decimal">默认小数位数</string>
    <string name="settings_keyboard">键盘设置</string>
    <string name="settings_keyboard_layout">数字键盘布局</string>
    <string name="settings_keyboard_layout_asc">正序(从下到上123...)</string>
    <string name="settings_keyboard_layout_desc">倒序(从下到上789...)</string>
    <string name="settings_zero_position">0和小数点位置</string>
    <string name="settings_zero_center">0在中间</string>
    <string name="settings_zero_right">0在右边</string>
    <string name="settings_about">关于</string>
    <string name="settings_save">保存设置</string>
    
    <!-- 关于页面 -->
    <string name="about_app">易盘 - 简单易用的计数工具</string>
    <string name="about_version">版本: 1.2</string>
    <string name="about_description">Github: https://github.com/OlafZhang/countEasy</string>
    <string name="about_copyright">遵循GPL-3.0协议开源</string>
</resources>